<resources>
    <string name="app_name" translatable="false">TorrServe</string>
    <string name="app_name_test" translatable="false">TorrServe Test</string>

    <string name="label_add">Add &amp; Play</string>
    <string name="label_play">Play</string>

    <string name="name">Name</string>
    <string name="torr_link">Torrent Link</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="playlist">Playlist</string>

    <string name="donate_msg">Your donation helps me to develop further, improve the program and create new ones</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="yandex_money" translatable="false">Yandex Money</string>
    <string name="google_play" translatable="false">Google Play</string>

    <string name="update">Update</string>
    <string name="update_server_remotly">Update from net</string>
    <string name="update_server_localy">Update from folder Download</string>
    <string name="version">Version</string>

    <string name="open">Open</string>
    <string name="send">Send</string>
    <string name="share_magnet">Share magnet</string>
    <string name="info">Info</string>

    <string name="restart_server">Restart local server</string>
    <string name="exit">Exit</string>

    <string name="connects_to_torrent">Connects to torrent</string>
    <string name="buffering_torrent">Buffering torrent</string>
    <string name="buffer">Buffer</string>
    <string name="peers">Peers</string>
    <string name="download_speed">Download speed</string>
    <string name="upload_speed">Upload speed</string>

    <string name="starting_server">Starting server...</string>
    <string name="loading_torrent_list">Loading torrent list...</string>
    <string name="server_stoped">Torrent server is stopped</string>
    <string name="stat_server_is_running">Torrent server is running</string>
    <string name="stat_server_is_not_running">Server is stopped or unavailable</string>

    <string name="start_server_on_boot">Start server on boot</string>
    <string name="show_preload_window">Show preload window</string>

    <string name="server_addr">Server address</string>
    <string name="cache_size">Cache size (MBytes)</string>
    <string name="preload_buffer_size">Preload buffer size (MBytes)</string>
    <string name="read_ahead_prc">Read ahead %</string>
    <string name="disable_tcp">Disable TCP</string>
    <string name="disable_utp">Disable UTP</string>
    <string name="disable_upnp">Disable UPNP</string>
    <string name="disable_dht">Disable DHT</string>
    <string name="disable_upload">Disable upload</string>
    <string name="ecnryption">Encryption (0-enable, 1-disable, 2-force)</string>
    <string name="connections_limit">Connections to torrent</string>
    <string name="download_rate_limit">Download rate limit (KBytes, 0-infinite)</string>
    <string name="upload_rate_limit">Upload rate limit (KBytes, 0-infinite)</string>

    <string name="default_player">Default player</string>
    <string name="choose_player">Choose player</string>

    <string name="retrieve_settings">Retrieve settings from server</string>

    <string name="permission_storage_msg">Storage permission is needed to write config file</string>
    <string name="permission_btn">GRANT</string>

    <string name="crash_app">"Ooooops... I crashed, but don't worry you can send error report to my developer to help him fix the issue."</string>

    <string name="error_torrent_not_found">Error torrent not found</string>
    <string name="error_server_start">Server start error</string>
    <string name="error_open_torrent">Error open torrent</string>
    <string name="error_add_torrent">Error add torrent</string>
    <string name="error_retrieving_settings">Error retrieving settings</string>
    <string name="error_sending_settings">Error sending settings</string>

    <string name="error_remove_torrent">Error remove torrent</string>

    <string name="warn_server_not_exists">Server not exist</string>
    <string name="warn_error_download_server">Error downloading server</string>
    <string name="warn_no_localy_updates">No local update</string>

    <string name="retrackers">Retrackers</string>
    <string-array name="retracker_mode">
        <item>Do nothing</item>
        <item>Add retrackers</item>
        <item>Remove retrackers</item>
        <item>Replace retrackers</item>
    </string-array>


    <string name="seasons">Seasons</string>
    <string name="search">Search</string>

    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="torrents">Torrents</string>

    <string name="page">Page</string>
    <string name="filter">Filter</string>
    <string name="year">Year</string>
    <string name="sort">Sort</string>
    <string name="genres">Genres</string>

    <string-array name="search_ftype">
        <item>By name</item>
        <item>Discover</item>
    </string-array>
</resources>
